data/derived/fa15/progs/unify/prog2124.ml.out
Characters 100-116:
  wwhile ((fs b), true,b);;
         ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type ('d -> 'd * bool) * 'd
